# expense-audit-ai

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
data/: generate_synthetic.py  sample_batch.json
docs/: DEMO_SCRIPT.md  architecture.md
expense_audit/: __init__.py  config.py  models.py
expense_audit/agents/: __init__.py  fraud_agent.py  orchestrator.py  policy_agent.py  report_agent.py  tools.py
expense_audit/engine/: __init__.py  fraud_engine.py  policy_engine.py
expense_audit/mcp/: __init__.py  drive_export.py
expense_audit/security/: __init__.py  audit_trail.py  pseudonymize.py
static/: swagger-dark.css
tests/: conftest.py  test_api.py  test_audit_logic.py  test_fraud_engine.py  test_policy_engine.py
