[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-audit-ai"
version = "1.0.0"
description = "Multi-agent expense report auditing system powered by Google ADK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mohammed Imad Thotan" }
]
keywords = ["expense-audit", "google-adk", "multi-agent", "fraud-detection", "finance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Agent framework
    "google-adk>=0.5.0",
    # LLM / Gemini SDK (used by ADK internally)
    "google-generativeai>=0.8.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Config / validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Data generation
    "faker>=30.0.0",
    # Utilities
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
expense-audit = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["expense_audit", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
